[metadata]
name = rtlpy
description = A Library of Python Utilities for RTL Design
author = Benjamin Davis
author_email = allRisc.dev@gmail.com
license = GPL3
license_files = LICENSE
url=https://github.com/RISCY-Lib/rtlpy
platforms = unix, linux, osx, cygwin, win32
version = 0.0.0-alpha
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11

[options]
packages =
  rtlpy
install_requires =
  ply>=3
python_requires = >=3.7
zip_safe = False

[options.extras_require]
testing =
  flake8 >= 3.7, < 6
  tox >= 3.27, < 4
  pytest >= 7, < 8
  coverage >= 6, < 7
  mypy >= 0.982, < 1

[options.package_data]
rtlpy = py.typed

[flake8]
max-line-length = 100
indent-size = 2
exclude =
  conf.py
  yacc.py
  lex.py